# openstreetmap-ng

./: .ckignore  .clang-format  .clang-format-ignore  .cursorignore  .cursorrules  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.json  .oxlintrc.jsonc  .pre-commit-config.yaml  .pylintrc  .python-version  .shellcheckrc  .sql-formatter.json  .stylelintignore  .stylelintrc.json  2025-08-31-command-messagefeatstart-is-runningcommand-m.txt  AGENTS.md  ANNOUNCEMENT.md  CHANGES.md  CONTRIBUTING.md  CURSOR_PAGINATION.md  FAQ.md  Makefile  OVERPASS_SQL_TRANSPILER.md  Pipfile  README.md  SECURITY.md  alembic.ini  biome.json  buf.gen.web.yaml  buf.gen.yaml  buf.yaml  bun.lockb  bunfig.toml  config.py  (+23 more)
.github/: FUNDING.yml  copilot-instructions.md
alembic/: env.py
app/: config.py  db.py  limits.py  main.py  storage.py  utils.py
config/: Caddyfile  alembic.ini  discardable_tags.json  feature_icon.json  feature_icon.toml  feature_icons.toml  feature_icons_popular.json  languages.yml  locales_names.json  postgres.conf  postgres.nix  pre-commit-config.nix  pre-commit-hook.nix  pre-commit.nix  process-compose.nix  redis.conf  rich_text.json  rich_text.toml  services-test.nix  socials.toml  supervisord.conf  supervisord.nix  trusted_hosts.txt  valkey.conf  w3c_colors.json  wiki_pages.json  wiki_tags.json
controllers/: shortlink.py  static_id.py
cython_lib/: geo_utils.py  geoutils.py  mercator.py  short_link.py  shortlink.py  tags_utils.py  xmltodict.py
cython_pkg/: mercator.py  short_link.py  xmltodict.py
db/: __init__.py  counter.py  cursor.py  transaction.py
docs/: PARTMAN_VS_TIMESCALEDB_ANALYSIS.md
lib/: auth.py  avatar.py  cache.py  crypto.py  element_icon.py  email.py  file_cache.py  languages.py  legal.py  locales.py  mailer.py  mercator.py  message_collector.py  nominatim.py  oauth1.py  oauth2.py  password_hash.py  rich_text.py  short_link.py  storage.py  timezones.py  translation.py  updating_cached_property.py  xmltodict.py
middlewares/: auth_middleware.py  http_size_limit_middleware.py  request_middleware.py  translation_middleware.py  version_middleware.py
models/: auth_provider.py  avatar_type.py  base_enum.py  cursor.py  editor.py  editor_name.py  element_member.py  element_member_type.py  element_type.py  file_name.py  format_style.py  geometry.py  geometry_type.py  issue_status.py  mail_from.py  mail_from_type.py  mail_source_type.py  note_event.py  note_status.py  oauth2_application_type.py  oauth2_code_challenge_method.py  osmchange_action.py  report_category.py  report_type.py  scope.py  str.py  tag_format.py  text_format.py  trace_visibility.py  typed_element_ref.py  user_avatar_type.py  user_preference_name.py  user_role.py  user_status.py  versioned_element_ref.py
optimized/: CMakeLists.txt  element_type.pyi  pyproject.toml  xml_parse.c  xml_parse.pyi  xml_unparse.c  xml_unparse.pyi
proto/: cursor.proto
repositories/: avatar_repository.py  changeset_repository.py  element_repository.py  message_repository.py  note_comment_repository.py  note_repository.py  oauth1_application_repository.py  oauth1_token_repository.py  oauth2_application_repository.py  oauth2_token_repository.py  trace_point_repository.py  trace_repository.py  user_block_repository.py  user_pref_repository.py  user_repository.py  user_token_account_confirm_repository.py  user_token_email_reply_repository.py  user_token_session_repository.py
resources/: 11152535.gpx  diary-3-thumbnail.xcf  founder-badge.README.md  logo.xcf  ngdev.xcf  song-1-thumbnail.xcf
responses/: osm_response.py
scripts/: benchmark.py  cython_build.py  db_load.py  db_preload.py  db_preload_convert.py  db_preload_load.py  db_preload_prepare.py  deploy.sh  dev_seed_traces.py  download_locale.py  extra_locales_names.json  feature_icons_popular_update.py  load_osm.py  locale_compile.sh  locale_compile_oci.py  locale_download.py  locale_make_frontend.py  locale_make_gnu.py  locale_make_i18next.py  locale_postprocess.py  make_locale_oci.py  mongo-init-replica.sh  preload_convert.py  preload_load.py  protoc_gen_pyi.py  protoc_gen_pyi_wkt_augments.py  rasterize.py  replication.py  replication_convert.py  replication_download.py  replication_generate.py  replication_load.py  reset_test_db.sh  svg2raster.py  timezone_bbox_update.py  users_deleted_txt.py  wiki_pages_update.py  wiki_tags_download.py  wiki_tags_update.py  zstd_tracks_download.py
serializers/: geometry.py
services/: auth_service.py  avatar_service.py  cache_service.py  changeset_comment_service.py  changeset_service.py  element_service.py  email_change_service.py  email_reply_service.py  mail_service.py  message_service.py  note_service.py  oauth1_nonce_service.py  oauth1_token_service.py  oauth2_token_service.py  session_service.py  trace_service.py  user_auth_service.py  user_pref_service.py  user_service.py  user_signup_service.py  user_token_account_confirm_service.py  user_token_email_change_service.py  user_token_email_reply_service.py  user_token_session_service.py
shellscripts/: _db-load.nix  _dev-upgrade.nix  _patch-shebang.nix  _pre-commit.sh  _scripts-postinstall.nix  aaguid-update.sh  ai-models-download.sh  browser-logos-update.sh  cython-build-fast.sh  cython-build.sh  cython-clean.sh  dev-clean.sh  dev-logs-global.sh  dev-logs-postgres.sh  dev-restart.sh  dev-start.nix  dev-stop.sh  discardable-tags-update.sh  feature-icons-popular-update.sh  format.sh  git-restore-mtimes.sh  locale-clean.sh  locale-download.sh  locale-make-gnu.sh  locale-make-i18next.sh  locale-pipeline-with-download.sh  locale-pipeline.sh  locale-postprocess.sh  nixpkgs-update.sh  open-app.sh  (+29 more)
speedup/: CMakeLists.txt  Cargo.toml  buffered_rand.c  buffered_rand.pyi  element_type.c  init.py  pyproject.toml  xattr.c  xattr.pyi  xml_parse.c  xml_unparse.c  xml_unparse.pyi
speedup/speedup.data/purelib/speedup/: __init__.pyi
speedup/src/: buffered_rand.rs  element_type.rs  lib.rs  xattr.rs  xml_parse.rs  xml_unparse.rs
xmltodict/: CMakeLists.txt  lib.c  meson.build  parse.c  pyproject.toml
xmltodict/subprojects/: libxml2.wrap
(+5298 files in other folders)
