[package]
name = "speedup"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
name = "speedup"

[dependencies]
ahash = "0.8.11"
getrandom = "0.2.16"
parking_lot = "0.12.3"
memchr = "2.7.4"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
quick-xml = "0.38.3"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
